# lottery

./: Cargo.toml  README.md
.github/workflows/: checks.yml  draw.yml  release.yml  staging.yml
res/: 2024-07-05-winner.json  2024-07-05.json
src/: bilibili.rs  cli.rs  main.rs
