[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "Lottery service of [acg.box](https://acg.box)."
edition     = "2021"
homepage    = "https://hack.ink/lottery"
license     = "GPL-3.0"
name        = "lottery"
readme      = "README.md"
repository  = "https://github.com/acg-box/lottery"
version     = "0.1.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
clap               = { version = "4.5", features = ["derive"] }
color-eyre         = { version = "0.6" }
rand               = { version = "0.8" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
